# KungsMod

./: .gitignore  CMakeLists.txt  README.md
KungsMod_SDL/: KungsMod_SDL.vcxproj  main.cpp
code/: CMakeLists.txt
code/cgame/: animtable.h  cg_draw.cpp  cg_ents.cpp  cg_local.h  cg_main.cpp  cg_players.cpp  cg_syscalls.cpp  cg_view.cpp  cg_weapons.cpp
code/client/: cl_cin.cpp  cl_input.cpp  cl_keys.cpp  cl_main.cpp  cl_warzonegui.cpp  cl_warzonegui.h
code/game/: NPC_stats.cpp  Q3_Interface.cpp  anims.h  bg_panimate.cpp  bg_pmove.cpp  bg_public.h  g_active.cpp  g_cmds.cpp  g_combat.cpp  g_functions.cpp  g_functions.h  g_fx.cpp  g_local.h  g_main.cpp  g_misc_model.cpp  (+9 more)
code/rd-gl2/: CMakeLists.txt  G2_API.cpp  G2_bones.cpp  G2_misc.cpp  compose_lib.cpp  compose_lib.h  glsl_shaders.cpp  include_console.h  include_imgui.h  matrix.cpp  nuklear.h  primitives_3d.h  tr_WorldEffects.cpp  tr_WorldEffects.h  tr_backend.cpp  tr_bsp.cpp  tr_cache.cpp  tr_cmds.cpp  tr_extensions.cpp  tr_extramath.cpp  tr_fbo.cpp  tr_glsl.cpp  tr_glsl_parse.cpp  tr_gui.cpp  tr_image.cpp  tr_image_dds.cpp  tr_imgui.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_mesh.cpp  tr_model.cpp  tr_model_ghoul2.cpp  tr_model_iqm.cpp  tr_model_md3.cpp  tr_model_mdr.cpp  tr_postprocess.cpp  tr_postprocess.h  tr_scene.cpp  (+13 more)
code/rd-gl2/glsl/: depthblur.glsl  generic.glsl  jka_weather.glsl  jkaweather.glsl  lightall.glsl  pshadow.glsl  refraction.glsl  ssao.glsl  surface_sprites.glsl  tonemap.glsl
code/rd-gl2/imgui/: imgui_api.cpp  imgui_default_docks.cpp  imgui_dock.cpp  imgui_fixedarea.h  imgui_impl_idtech3_gles.cpp  include_quakegl.h
code/rd-gl2/imgui_docks/: dock.h  dock_console.cpp  dock_node.cpp
code/rd-gl2/imgui_docks_openjk/: dock_all.h  dock_controlflow.cpp  dock_controlflow.h  dock_images.cpp  dock_images.h  dock_mapinfo.cpp  dock_mapinfo.h  dock_mdxa.cpp  dock_mdxa.h  dock_mdxm.cpp  dock_mdxm.h  dock_opsys.cpp  dock_opsys.h  dock_perf.cpp  dock_perf.h  dock_quakeshaders.cpp  dock_shadereditor.cpp  dock_shadereditor.h
code/rd-gl2/imgui_openjk/: gluecode.cpp  imgui_openjk_default_docks.cpp  imgui_openjk_default_docks.h
code/rd-gl2/op_types/: op_type_image.cpp  op_type_image.h
code/rd-gl2/ops/: op.cpp  op.h  op_all.cpp  op_all.h  op_astar.cpp  op_astar.h  op_axis.cpp  op_checkerboard.cpp  op_craft.cpp  op_cube.cpp  op_divide.cpp  op_expression.cpp  op_file.cpp  op_file.h  op_gl_attrib.cpp  op_gl_buffer.cpp  op_gl_fragment_shader.cpp  op_gl_fragment_shader.h  op_gl_framebuffer.cpp  op_gl_legacy.cpp  op_gl_program.cpp  op_gl_uniform.cpp  op_gl_vertex_shader.cpp  op_idtech3_image.cpp  op_idtech3_image.h  op_idtech3_image_color.cpp  op_idtech3_image_color.h  op_idtech3_image_mix.cpp  op_idtech3_image_scale.cpp  op_idtech3_image_split.cpp  op_idtech3_image_split.h  op_idtech3_image_split_alpha.cpp  op_idtech3_image_split_alpha.h  op_idtech3_mdxm.cpp  op_idtech3_mdxm.h  op_idtech3_perspectivematrix.cpp  op_idtech3_player.cpp  op_idtech3_refentity.cpp  op_idtech3_refentity.h  op_idtech3_rmo.cpp  (+63 more)
code/rd-gl2/opsys/: opsys.cpp  opsys.h  opsys_editor.cpp  opsys_hierarchy.cpp  opsys_hierarchy.h  opsys_javascript.cpp  opsys_javascript.h  opsys_link_matrices.cpp  opsys_link_matrices.h  opsys_opengl.cpp  opsys_opengl.h  opsys_ops_editor.cpp
code/rd-gl2/utils_opengl/: debuglines.h
codemp/: include_ccall.h  include_console.h  include_gl.h  include_glm.h  include_imgui.h
codemp/rd-rend2/: CMakeLists.txt  G2_API.cpp  G2_API.h  G2_bolts.cpp  G2_bones.cpp  G2_misc.cpp  G2_surfaces.cpp  compose_images.cpp  compose_images.h  compose_lib.cpp  compose_lib.h  compose_models.cpp  compose_models.h  include_gl.h  include_imgui.h  matrix.h  primitives_3d.cpp  tr_allocator.cpp  tr_animation.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cache.cpp  tr_cache.h  tr_cmds.cpp  tr_curve.cpp  tr_decals.cpp  tr_extensions.cpp  tr_extramath.cpp  tr_extratypes.h  tr_fbo.cpp  tr_flares.cpp  tr_ghoul2.cpp  tr_glsl.cpp  tr_glsl_parse.cpp  tr_image.cpp  tr_imgui.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  (+18 more)
codemp/rd-rend2/glsl/: compact.cpp
codemp/rd-rend2/imgui/: imgui_impl_idtech3_gles.cpp
codemp/rd-rend2/imgui/MagicFile/: magicfile.cpp
codemp/rd-rend2/imgui_docks_openjk/: anims_to_string.h  dock_all.cpp  dock_anims.cpp  dock_anims.h  dock_controlflow.cpp  dock_fbos.h  dock_frames.cpp  dock_ghoul2.cpp  dock_ghoul2.h  dock_images.cpp  dock_images.h  dock_mapinfo.cpp  dock_mdxa.cpp  dock_mdxa.h  dock_mdxm.cpp  dock_mdxm.h  dock_menus.cpp  dock_models.cpp  dock_models.h  dock_opsys.cpp  dock_opsys.h  dock_perf.cpp  dock_quakeshaders.cpp  dock_shadereditor.cpp
codemp/rd-rend2/imgui_openjk/: gluecode.cpp  gluecode.h  imgui_openjk_default_docks.cpp
codemp/rd-rend2/old/imgui/: imgui_impl_idtech3_gles.cpp
codemp/rd-rend2/old/imgui_docks_openjk/: dock_all.cpp  dock_controlflow.cpp  dock_mdxa.cpp  dock_mdxm.cpp  dock_perf.cpp
codemp/rd-rend2/old/imgui_openjk/: gluecode.cpp  imgui_openjk_default_docks.cpp
codemp/rd-rend2/op_types/: op_type_image.cpp
codemp/rd-rend2/ops/: op.h  op_all.h  op_astar.cpp  op_axis.h  op_craft.h  op_cube.cpp  op_cube.h  op_expression.cpp  op_gl_buffer.h  op_gl_fragment_shader.cpp  op_gl_framebuffer.cpp  op_gl_framebuffer.h  op_gl_legacy.h  op_gl_program.cpp  op_gl_program.h  op_idtech3_image.cpp  op_idtech3_image_color.cpp  op_idtech3_image_mix.cpp  op_idtech3_image_scale.cpp  op_idtech3_image_split.cpp  op_idtech3_image_split_alpha.cpp  op_idtech3_perspectivematrix.cpp  op_idtech3_rmo.cpp  op_idtech3_rmo.h  op_idtech3_shader.cpp  op_idtech3_shader_pbr.cpp  op_javascript_file.cpp  op_keyboard.cpp  op_line.cpp  op_matrices.h  op_matrix_decompose.cpp  op_matrix_identity.cpp  op_matrix_identity.h  op_matrix_inverse.cpp  op_matrix_multiply_point.h  op_matrix_rotate.cpp  op_matrix_scale.h  op_matrix_transpose.cpp  op_matrix_transpose.h  op_minus.cpp  (+15 more)
codemp/rd-rend2/opsys/: opsys_editor.cpp  opsys_hierarchy.h  opsys_javascript.h  opsys_link_matrices.cpp  opsys_utils.h
codemp/rd-rend2/utils_opengl/: debuglines.h
makeheaders/: makeheaders.cpp  makeheaders.vcxproj  makeheaders.vcxproj.filters
(+787 files in other folders)
